@@ -101,6 +101,7 @@ flac_convert(void *dest,
 			       position, end);
 		break;
 
+	case SAMPLE_FORMAT_S24:
 	case SAMPLE_FORMAT_UNDEFINED:
 		/* unreachable */
 		assert(false);
