@@ -39,6 +39,9 @@ struct pcm_convert_state {
 	/** the buffer for converting the sample format */
 	struct pcm_buffer format_buffer;
 
+	/** the buffer for converting to/from packed samples */
+	struct pcm_buffer pack_buffer;
+
 	/** the buffer for converting the channel count */
 	struct pcm_buffer channels_buffer;
 
