@@ -78,6 +78,7 @@ ver 0.16 (20??/??/??)
 * log: redirect stdout/stderr to /dev/null if syslog is used
 * set the close-on-exec flag on all file descriptors
 * pcm_volume, pcm_mix: implemented 32 bit support
+* support packed 24 bit samples
 * CUE sheet support
 * obey $(sysconfdir) for default mpd.conf location
 * build with large file support by default
